--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,1 +1,35 @@
-// Your footer style
+.the-footer {
+  margin-top: 20px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(40, 40, 40);
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+}
+
+.social-media-footer-box {
+  padding-left: 50px;
+  ul {
+    margin: 0;
+    font-size: 30px;
+    li {
+      padding: 0px 16px;
+      a {
+        color: white;
+        &:hover {
+          text-decoration: none;
+          color: $brand-color;
+        }
+      }
+    }
+  }
+}
+
+html {
+  min-height: 100%;
+  position: relative;
+  padding-bottom: 100px;
+}
