--- a/app/views/pages/package.html.erb
+++ b/app/views/pages/package.html.erb
@@ -5,27 +5,27 @@
 
 <div class="container">
   <div class="row">
-      <div class="col-xs-12 col-sm-4">
+    <div class="col-xs-12 col-sm-4">
 
-    <% @items.each do |item| %>
-    <div class="card">
+      <div class="card">
+        <% @items.each do |item| %>
         <p><%= item.size %></p>
 
-        <div class="card-category">
-          <p><%= item.brand %></p>
-        </div>
+        <!-- <div class="card-category"> -->
+        <p><%= item.brand %></p>
+        <!-- </div> -->
 
         <p><%= item.price %></p>
 
         <p><%= item.stock %></p>
 
-        <div class="card-user">
-          <p><%= item.description %></p>
-        </div>
-      </div>
+        <!-- <div class="card-user"> -->
+        <%= item.description %>
+        <!-- </div> -->
 
+        <% end %>
+      </div>
     </div>
-    <% end %>
 
   </div>
 </div>
