--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,8 +2,9 @@
   height: 175px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
-  color: white;
+  color: green;
   position: relative;
+  border: solid black;
 }
 .card-user {
   position: absolute;
@@ -38,3 +39,8 @@
   background: black;
   opacity: 0;
 }
+.card-row{
+  margin-top: 20px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+}
+
