--- a/app/views/pages/package.html.erb
+++ b/app/views/pages/package.html.erb
@@ -1,31 +1,45 @@
-<% @category.each do |i_t| %>
-<%= i_t.item_type %>
-<% end %>
 
 
 <div class="container">
-  <div class="row">
+  <div class="row card-row">
+
+
+  <% @categories.each do |category| %>
+    <% @items.each do |item| %>
     <div class="col-xs-12 col-sm-4">
-
       <div class="card">
-        <% @items.each do |item| %>
-        <p><%= item.size %></p>
-
-        <!-- <div class="card-category"> -->
+      <div class="card-user">
+      <h1><%= category.item_type %></h1>
         <p><%= item.brand %></p>
-        <!-- </div> -->
+      </div>
+        <div class="card-category">
+        <!-- <p><%#= item.size %></p> -->
 
-        <p><%= item.price %></p>
-
-        <p><%= item.stock %></p>
-
-        <!-- <div class="card-user"> -->
+        <p><%= "#{item.price}" + "$" %></p>
+</div>
+        <!-- <p><%#= item.stock %></p> -->
+        <div class="card-description">
         <%= item.description %>
-        <!-- </div> -->
-
-        <% end %>
+        </div>
       </div>
     </div>
-
+    <% end %>
+    <% end %>
   </div>
+
+
+
+
+
+  <div id="sidebar">
+  <% @categories.each do |i_t| %>
+  <i class="fa fa-star">
+<%= i_t.item_type%>
+  </i>
+  <% end %>
+  <%= link_to "Order", orders_path %>
 </div>
+</div>
+
+
+
