--- a/app/views/items/package_index.js.erb
+++ b/app/views/items/package_index.js.erb
@@ -1,9 +1,9 @@
 
-$("#package-items-index").empty();
+$(".card-row").empty();
 var item_type = "<%= j Category.find(@category_id).item_type.pluralize(2)  %>";
 var filter_form = "<%= j render 'items/package_index_item_form', category: Category.find(@category_id).item_type, min: @min_price, max: @max_price, size: @size %>";
-$("#package-items-index").append($(filter_form));
-$("#package-items-index").append($("<h1>" + item_type + "</h1>"));
+$(".card-row").append($(filter_form));
+$(".card-row").append($("<h1>" + item_type + "</h1>"));
 
 <% @items.each do |i| %>
   <% item_attr = {
@@ -14,6 +14,6 @@ $("#package-items-index").append($("<h1>" + item_type + "</h1>"));
     description: i.description
   } %>
   var item = $("<%=  j render 'items/package_index_item', item_attr %>");
-  $("#package-items-index").append(item);
+  $(".card-row").append(item);
 <% end %>
 
