--- a/app/views/pages/package.html.erb
+++ b/app/views/pages/package.html.erb
@@ -1,28 +1,8 @@
 <div class="container">
   <div class="row card-row">
 
+    <%= render 'pages/package_page', categories: @categories, items: @items %>
 
-  <% @categories.each do |category| %>
-    <% @items.each do |item| %>
-    <div class="col-xs-12 col-sm-4">
-      <div class="card">
-      <div class="card-user">
-      <h1><%= category.item_type %></h1>
-        <p><%= item.brand %></p>
-      </div>
-        <div class="card-category">
-        <!-- <p><%#= item.size %></p> -->
-
-        <p><%= "#{item.price}" + "$" %></p>
-</div>
-        <!-- <p><%#= item.stock %></p> -->
-        <div class="card-description">
-        <%= item.description %>
-        </div>
-      </div>
-    </div>
-    <% end %>
-    <% end %>
   </div>
 
   <div id="sidebar">
@@ -39,7 +19,4 @@
 
 <%= link_to "Helmets", package_items_path(category: "helmet"), remote: true, method: :post %>
 <%= link_to "Skates", package_items_path(category: "skate"), remote: true, method: :post %>
-
-<div id="package-items-index">
-
-</div>
+<%= link_to "Main", package_main_path(categories: @categories, items: @items), remote: true, method: :post %>
