--- a/app/views/pages/_package_page.html.erb
+++ b/app/views/pages/_package_page.html.erb
@@ -1,21 +1,20 @@
-<% categories.each do |category| %>
-  <% items.each do |item| %>
+<% @items.each do |item| %>
   <div class="col-xs-12 col-sm-4">
-    <div class="card">
-    <div class="card-user">
-    <h1><%= category.item_type %></h1>
-      <p><%= item.brand %></p>
-    </div>
-      <div class="card-category">
-      <!-- <p><%#= item.size %></p> -->
-
-      <p><%= "#{item.price}" + "$" %></p>
+    <%= link_to package_item_path(item: item.id), method: :post do %>
+      <div class="card">
+        <div class="card-user">
+          <h1><%= Category.find(item.category_id).item_type %></h1>
+          <p><%= item.brand %></p>
+        </div>
+        <div class="card-category">
+          <!-- <p><%= item.size %></p> -->
+          <p><%= "#{item.price}" + "$" %></p>
+        </div>
+        <!-- <p><%= item.stock %></p> -->
+        <div class="card-description">
+          <%= item.description %>
+        </div>
       </div>
-      <!-- <p><%#= item.stock %></p> -->
-      <div class="card-description">
-      <%= item.description %>
-      </div>
-    </div>
+    <% end %>
   </div>
-  <% end %>
-  <% end %>
+<% end %>
