--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,13 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://unsplash.it/200/300/?random');">
   <div class="banner-content">
-  <%= form_tag package_path, method: :post, remote: true do |i| %>
-    <%= number_field_tag "min_price", 0, min: 0 %>
-      <% if max == 99999999999999 %>
-        <%= number_field_tag "max_price", min: 0 %>
-      <% else %>
-        <%= number_field_tag "max_price", max ? max / 100 : nil, min: 0 %>
-      <% end %>
-    <% end %>
+  <%#= form_tag package_path, method: :post, remote: true do |i| %>
+    <%#= number_field_tag "min_price", 0, min: 0 %>
+      <%# if max == 99999999999999 %>
+        <%#= number_field_tag "max_price", min: 0 %>
+      <%# else %>
+        <%#= number_field_tag "max_price", max ? max / 100 : nil, min: 0 %>
+      <%# end %>
+    <%# end %>
   </div>
 </div>
 
