--- a/app/views/pages/_package_page.html.erb
+++ b/app/views/pages/_package_page.html.erb
@@ -1,6 +1,6 @@
 <% @items.each do |item| %>
   <div class="col-xs-12 col-sm-4">
-    <%= link_to package_item_path(item: item.id), method: :post do %>
+    <%= link_to package_item_path(item: item.id), method: :post, remote: true do %>
       <div class="card">
         <div class="card-user">
           <h1><%= Category.find(item.category_id).item_type %></h1>
