--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,12 +3,13 @@
   text-align: center;
   flex-direction: column;
   height: 100vh;
-  /* if you have a 70px navbar => height: calc(100vh - 70px); */
+  // height: calc(100vh - 70px);
   background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom:10px;
+  margin-top:-70px;
+  padding-top: 0px;
 }
 .banner h1 {
   font-size: 50px;
