Added a link to the individual items witch skip_before authenticate_user, soime button links and a h1

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -35,15 +35,16 @@
   flex: 0 1 auto;
   cursor: pointer;
   padding: 0 20px;
+  color:white;
 }
 
 /* Navbar standard link */
 .navbar-wagon-link {
-  color: #616668;
+  color: $base-button-color;
   font-size: 14px;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: $base-button-color;
   text-decoration: none;
 }
 
