Added the list of items inside the individual items and it displays only the ones you searched for when you enter the prices in the form

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,31 +1,71 @@
-<form action="/items" action="get">
-  <input type="text" name="min_price" value="<%= params[:min_price] %>">
-  <input type="text" name="max_price" value="<%= params[:max_price] %>">
-  <select name="category">
-    <% @list_of_categories.each do |i| %>
-      <% x = "<option value=\"#{i}\">#{i}</option>" %>
-      <% x_selected = "<option selected=\"selected\" value=\"#{params[:category]}\">#{params[:category]}</option>" %>
-      <% if i.to_s == params[:category] %>
+<div class="container">
+  <div class="row card-row">
+    <form action="/items" action="get">
+      <input type="text" name="min_price" value="<%= params[:min_price] %>">
+      <input type="text" name="max_price" value="<%= params[:max_price] %>">
+      <select name="category">
+        <% @list_of_categories.each do |i| %>
+        <% x = "<option value=\"#{i}\">#{i}</option>" %>
+        <% x_selected = "<option selected=\"selected\" value=\"#{params[:category]}\">#{params[:category]}</option>" %>
+        <% if i.to_s == params[:category] %>
         <%= x_selected.html_safe %>
-      <% else %>
+        <% else %>
         <%= x.html_safe %>
+        <% end %>
+        <% end %>
+      </select>
+      <input type="hidden" name="filter" value="true">
+      <input type="Submit">
+    </form>
+    <% if @item_list_by_brand.length == 0 %>
+<%# raise %>
+    <% @items.each do |item| %>
+    <div class="col-xs-12 col-sm-4">
+      <%= link_to package_item_path(item: item.id), method: :post, remote: true do %>
+      <div class="card">
+        <div class="card-user">
+          <h1><%= Category.find(item.category_id).item_type %></h1>
+          <p><%= item.brand %></p>
+        </div>
+        <div class="card-category">
+          <!-- <p><%= item.size %></p> -->
+          <p><%= "#{item.price}" + "$" %></p>
+        </div>
+        <!-- <p><%= item.stock %></p> -->
+        <div class="card-description">
+          <%= item.description %>
+        </div>
+      </div>
       <% end %>
+    </div>
     <% end %>
-  </select>
-  <input type="hidden" name="filter" value="true">
-  <input type="Submit">
-</form>
+    <% else %>
+        <% @item_list_by_brand.each do |i| %>
+        <div class="col-xs-12 col-sm-4">
+          <div class="card">
+            <div class="card-user">
+              <h1><%= Category.find(i.category_id).item_type %></h1>
+              <p><%= i.brand %></p>
+            </div>
+            <div class="category">
+              <p><%= "#{i.price / 100 }" + "$"%></p>
+              <p><%= i.size %></p>
+            </div>
+            <div class="card-description">
+              <p>Description: <%= i.description %></p>
+              <%= link_to "View", item_path(i) %>
+            </div>
+          </div>
+        </div>
+    <% end %>
+    <% end %>
 
-<% if @item_list_by_brand.any? %>
-  <% @item_list_by_brand.each do |i| %>
-    <p>Item Type: <%= Category.find(i.category_id).item_type %></p>
-    <p>Brand: <%= i.brand %></p>
-    <p>Price: <%= i.price / 100 %></p>
-    <p>Size: <%= i.size %></p>
-    <%= link_to "View", item_path(i) %>
-  <% end %>
-<% end %>
 
 
+
+
+
+  </div>
+</div>
 
 
