--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -40,6 +40,9 @@
   opacity: 0;
 }
 .card-row{
+  padding-top: 30px;
+  padding-right: 30px;
+  padding-left: 30px;
   margin-top: 20px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.6);
 }
