Made the sign up and login very pretty

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,4 +1,11 @@
 .base-button {
   background-color: $base-button-color;
   border-radius: 7px;
+  color:white;
 }
+
+
+.base-button:hover{
+  background-color:$base-button-color-hover;
+  color:white;
+  }
