--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,6 +6,7 @@
   position: relative;
   border: solid black;
 }
+
 .card-user {
   position: absolute;
   right: 10px;
@@ -43,7 +44,12 @@
   padding-top: 30px;
   padding-right: 30px;
   padding-left: 30px;
+  padding-bottom: 30px;
   margin-top: 20px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  box-shadow: 0 2px 3px rgba(0,0,0,0.6);
+  background-color: white;
+  h2,h5{
+  font-family: $base-font;
+  }
 }
 
