--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -4,11 +4,11 @@
  * ------------------------------------- */
 
 // General style
-$font-family-sans-serif:  $base-font;
+// $font-family-sans-serif:  $base-font;
 $body-bg:                 white;
 $font-size-base:          $base-size;
 $line-height-base:        $base-height;
-$headings-font-family:    $header-font;
+// $headings-font-family:    $header-font;
 
 // Semantic color scheme
 // => http://getbootstrap.com/customize/#colors
@@ -26,3 +26,6 @@ $border-radius-small: 2px;
 
 //Base Button colors
 $base-button-color: #64D6FF;
+$base-button-color-hover: #48C3F0;
+
+$base-font: $our-font;
