--- a/app/views/pages/_package_show.html.erb
+++ b/app/views/pages/_package_show.html.erb
@@ -3,7 +3,7 @@
     <p>PHOTO</p>
   </div>
   <div class="package-item-details">
-    <h2><%= link_to Category.find(@item.category_id).item_type, package_items_path(category: Category.find(@item.category_id).item_type), remote: true, method: :post %></h2>
+    <h2><%= link_to Category.find(@item.category_id).item_type, package_items_path(category: Category.find(@item.category_id).item_type, item: @item.id), remote: true, method: :post %></h2>
     <div class="package-item-brand-name">
       <p><%= @item.brand %></p>
     </div>
@@ -17,5 +17,5 @@
       <p><%= @item.description %></p>
     </div>
   </div>
-  <%= link_to "Main", package_main_path(categories: @categories, items: @items), remote: true, method: :post %>
+  <%= link_to "Main", package_main_path, remote: true %>
 </div>
