--- a/app/views/items/package_show.js.erb
+++ b/app/views/items/package_show.js.erb
@@ -1,3 +1,3 @@
 $(".card-row").empty();
-var container = "<%= j render 'pages/package_show', item: @item %>";
+var container = "<%= j render 'items/package_show', item: @item %>";
 $(".card-row").append($(container));
