--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,8 @@
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
+    <div><%= link_to "Package", "/package" %></div>
+    <div><%= link_to "Cart", orderitems_path %></div>
     <%= link_to "Buy Individual Items", items_path, class: "btn base-button" %>
     <!-- Different navigation if login or not -->
     <% if user_signed_in? %>
