--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -7,6 +7,7 @@
   padding: 0px 30px;
   align-items: center;
   justify-content: space-between;
+  font-family: $base-font;
 }
 
 /* Optional class to fix the navbar on top */
