--- a/app/views/pages/_package_show.html.erb
+++ b/app/views/pages/_package_show.html.erb
@@ -1,31 +1,24 @@
-<div class="container">
   <div class="package-item-container">
     <div class="package-item-photo">
       <p>PHOTO</p>
     </div>
     <div class="package-item-details">
+    <div class="package-item-type">
       <h2><%= Category.find(@item.category_id).item_type %></h2>
-      <div class="package-item-brand-name">
-        <p><%= @item.brand %></p>
+      </div>
+      <div class="package-item-brand-name text-center">
+        <%= @item.brand %>
       </div>
       <div class="package-item-price">
-        <p><%= @item.price / 100 %></p>
+        <p><%= "#{@item.price / 100}" + " " + "$" %></p>
       </div>
       <div class="package-item-size-select">
         <p><%= @item.size %></p>
       </div>
       <div class="package-item-description">
-        <p><%= @item.description %></p>
+        <p>Description: <%= @item.description %></p>
       </div>
     </div>
-
-    <div>
-      <%= link_to "Main", package_main_path, remote: true %>
-    </div>
-
-
-    <div>
-      <%= link_to "Other #{Category.find(@item.category_id).item_type.pluralize}", package_items_path(category: Category.find(@item.category_id).item_type, item: @item.id), remote: true, method: :post %>
-    </div>
+      <%= link_to "Main", package_main_path, remote: true, class:"btn package-item-main-button" %>
+      <%= link_to "Other #{Category.find(@item.category_id).item_type.pluralize}", package_items_path(category: Category.find(@item.category_id).item_type, item: @item.id), remote: true, method: :post, class:"btn package-item-main-button-two" %>
   </div>
-</div>
