--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,8 @@
 
     <%= simple_form_for :search,  url: package_path , :method => :get, html: {class: 'form-inline'} do |f| %>
 
-      <%= f.input :price_lower, as: :integer, required: false, placeholder: "Min" %>
-      <%= f.input :price_upper, as: :integer, required: false, placeholder: "Max" %>
+      <%= f.input :price_lower, as: :integer, required: false, placeholder: "Min", label: false %>
+      <%= f.input :price_upper, as: :integer, required: false, placeholder: "Max", label: false %>
       <%= f.submit "Submit", class: "btn base-button" %>
   <% end %>
 
