--- a/app/views/pages/package.html.erb
+++ b/app/views/pages/package.html.erb
@@ -7,10 +7,13 @@
 
   <div id="sidebar">
     <% @categories.each do |i_t| %>
-    <i class="fa fa-star">
-      <%= i_t.item_type%>
-    </i>
+    <ul>
+      <li>
+        <%= i_t.item_type%>
+      </li>
+    </ul>
     <% end %>
-    <%= link_to "Order", orders_path %>
+    <%= link_to "Order", orders_path, class:"btn sidebar-order-button" %>
   </div>
+</div>
 </div>
