--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -1,29 +1,65 @@
-#sidebar {
-  background-color:transparent;
-  position: absolute;
-  right: 0px;
-  top: 40px;
-  bottom: 0px;
-  width: 100px;
-  text-align: center;
+// #sidebar {
+//   background-color:transparent;
+//   position: absolute;
+//   right: 0px;
+//   top: 40px;
+//   bottom: 0px;
+//   width: 100px;
+//   text-align: center;
+// }
+
+// #sidebar ul {
+//   list-style: none;
+//   padding-left: 0px;
+// }
+
+// #sidebar li {
+//   margin-top:50px;
+//   margin-bottom: 50px;
+// }
+
+// #sidebar a {
+//   text-decoration: none;
+//   font-size: 25px;
+//   color:#788188;
+// }
+
+// #sidebar a:hover {
+//   color: #1C50FE;
+// }
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 80vh;
+  padding: 20px;
+  background-color: rgb(245, 245, 245);
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
-#sidebar ul {
-  list-style: none;
-  padding-left: 0px;
+.package-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  margin: 4px auto;
+  p {
+    margin: 0;
+  }
+}
+.package-items {
+  width: 100%;
 }
 
-#sidebar li {
-  margin-top:50px;
-  margin-bottom: 50px;
-}
-
-#sidebar a {
-  text-decoration: none;
-  font-size: 25px;
-  color:#788188;
-}
-
-#sidebar a:hover {
-  color: #1C50FE;
+.place-package-order {
+  padding: 10px 40px;
+  a {
+    color: white !important;
+    &:hover {
+      text-decoration: none;
+    }
+  }
+  margin-bottom: 40px;
 }
