--- a/app/views/pages/_package_show.html.erb
+++ b/app/views/pages/_package_show.html.erb
@@ -1,4 +1,4 @@
-  <div class="package-item-container">
+<!--   <div class="package-item-container">
     <div class="package-item-photo">
       <p>PHOTO</p>
     </div>
@@ -22,3 +22,4 @@
       <%= link_to "Main", package_main_path, remote: true, class:"btn package-item-main-button" %>
       <%= link_to "Other #{Category.find(@item.category_id).item_type.pluralize}", package_items_path(category: Category.find(@item.category_id).item_type, item: @item.id), remote: true, method: :post, class:"btn package-item-main-button-two" %>
   </div>
+ -->
