--- a/app/views/items/_package_index_item_form.html.erb
+++ b/app/views/items/_package_index_item_form.html.erb
@@ -10,3 +10,6 @@
   <%= hidden_field_tag "filter", "true" %>
   <%= submit_tag %>
 <% end %>
+
+<%= link_to "Main", package_main_path, remote: true, class: "btn btn-primary back-to-main index-back-button" %>
+
