--- a/app/views/pages/package.html.erb
+++ b/app/views/pages/package.html.erb
@@ -17,9 +17,7 @@
                 </div>
               <% end %>
             </div>
-            <button class="btn btn-success place-package-order">
-              <%= link_to "Order", orders_path %>
-            </button>
+            <%= link_to "Proceed to Checkout", orderitems_path, class: "btn btn-success place-package-order" %>
           </div>
         </div>
       </div>
