--- a/app/assets/stylesheets/components/_packages.scss
+++ b/app/assets/stylesheets/components/_packages.scss
@@ -46,6 +46,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding-bottom: 40px;
 }
 
 .package-item-main-header {
@@ -111,7 +112,6 @@
       text-decoration: none;
     }
   }
-  margin-bottom: 40px;
 }
 
 .add-to-cart {
@@ -122,8 +122,22 @@
       text-decoration: none;
     }
   }
-  margin-bottom: 40px;
 }
+
+.back-to-main {
+  padding: 10px 40px;
+  color: white !important;
+  &:hover {
+    text-decoration: none;
+  }
+  margin: 10px 0px;
+}
+
+.index-back-button {
+  margin-bottom: -16px;
+}
+
+
 // .package-item-type{
 //   position:absolute;
 //   top: 10px;
