--- a/app/views/pages/_package_page.html.erb
+++ b/app/views/pages/_package_page.html.erb
@@ -7,18 +7,22 @@
             <% item = @items[j] %>
             <% unless item.nil? %>
               <%= link_to package_item_path(item: item.id), method: :post, remote: true do %>
-                <div class="card">
-                  <div class="card-user">
-                    <h1><%= Category.find(item.category_id).item_type %></h1>
-                    <p><%= item.brand %></p>
+                <% if item.cart %>
+                  <div class="card green-card">
+                <% else %>
+                  <div class="card">
+                <% end %>
+                    <div class="card-user">
+                      <h1><%= Category.find(item.category_id).item_type %></h1>
+                      <p><%= item.brand %></p>
+                    </div>
+                    <div class="card-category">
+                      <p><%= "#{item.price / 100}" + "$" %></p>
+                    </div>
+                    <div class="card-description">
+                      <%= item.description %>
+                    </div>
                   </div>
-                  <div class="card-category">
-                    <p><%= "#{item.price / 100}" + "$" %></p>
-                  </div>
-                  <div class="card-description">
-                    <%= item.description %>
-                  </div>
-                </div>
               <% end %>
             <% end %>
           </div>
