added seed wherein each item comes in every size (beware of long descriptions)

--- a/app/views/pages/_package_page.html.erb
+++ b/app/views/pages/_package_page.html.erb
@@ -22,9 +22,9 @@
                     <div class="card-category">
                       <p><%= "#{item.price / 100}" + "$" %></p>
                     </div>
-                    <div class="card-description">
+<!--                     <div class="card-description">
                       <%= item.description %>
-                    </div>
+                    </div> -->
                   </div>
               <% end %>
             <% end %>
