--- a/app/assets/stylesheets/components/_packages.scss
+++ b/app/assets/stylesheets/components/_packages.scss
@@ -1,6 +1,7 @@
 .package-item-container{
   display: flex;
   height: 100%;
+  font-family: $base-font;
 }
 
 .package-item-photo {
@@ -11,6 +12,7 @@
 
 .main-photo {
   height: 80%;
+  background-size: cover!important;
   border-top: 2px solid black;
   border-right: 2px solid black;
   border-left: 2px solid black;
@@ -24,6 +26,7 @@
 
 .bottom-photo {
   flex: 1 0;
+  background-size: cover !important;
   border-top: 1px solid black;
   border-right: 1px solid black;
   border-left: 1px solid black;
@@ -84,18 +87,19 @@
 }
 
 .size-circle {
-  width: 60px;
-  height: 60px;
-  background-color: red;
-  color: white;
+  width: 40px;
+  height: 40px;
+  border: solid 1px black;
+  color: black;
+  // font-size: 20px;
   border-radius: 50%;
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin: 0px 10px;
   h3 {
+    font-size: 20px;
     margin: 0;
-    font-weight: bold;
   }
 }
 
