--- a/app/views/items/_package_index_item_form.html.erb
+++ b/app/views/items/_package_index_item_form.html.erb
@@ -11,5 +11,5 @@
   <%= submit_tag %>
 <% end %>
 
-<%= link_to "Main", package_main_path, remote: true, class: "btn btn-primary back-to-main index-back-button" %>
+<%= link_to "Main", package_main_path, remote: true, class: "btn base-button back-to-main index-back-button" %>
 
