--- a/app/views/pages/package.html.erb
+++ b/app/views/pages/package.html.erb
@@ -17,7 +17,7 @@
                 </div>
               <% end %>
             </div>
-            <%= link_to "Proceed to Checkout", orderitems_path, class: "btn btn-success place-package-order" %>
+            <%= link_to "Proceed to Checkout", orderitems_path, class: "btn cart-button place-package-order" %>
           </div>
         </div>
       </div>
