--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -1,4 +1,5 @@
 .sidebar {
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,6 +8,8 @@
   padding: 20px;
   background-color: rgb(245, 245, 245);
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  right: 25px;
+  width: 240px;
 }
 
 .package-item {
@@ -31,5 +34,5 @@
       text-decoration: none;
     }
   }
-  margin-bottom: 40px;
+  margin-bottom: 0px;
 }
