--- a/app/views/items/_package_show.html.erb
+++ b/app/views/items/_package_show.html.erb
@@ -29,11 +29,33 @@
         <h3><%= @item.brand %></h3>
       </div>
       <div class="package-item-sizes">
-        <a href="#"><div class="size-circle"><h3>xs</h3></div></a>
-        <a href="#"><div class="size-circle"><h3>sm</h3></div></a>
-        <a href="#"><div class="size-circle"><h3>md</h3></div></a>
-        <a href="#"><div class="size-circle"><h3>lg</h3></div></a>
-        <a href="#"><div class="size-circle"><h3>xl</h3></div></a>
+        <% if current_user %>
+          <% order_item = OrderItem.joins(:order).where(item_id: @item.id, package: true).where("orders.user_id = ?", current_user.id) %>
+          <%= link_to "xs", edit_orderitem_path(order_item[0], { size_update: true, size: "extra small" }), remote: true, method: :patch, class: "size-circle xs" %>
+          <%= link_to "sm", edit_orderitem_path(order_item[0], { size_update: true, size: "small" }), remote: true, method: :patch, class: "size-circle sm" %>
+          <%= link_to "md", edit_orderitem_path(order_item[0], { size_update: true, size: "medium" }), remote: true, method: :patch, class: "size-circle md" %>
+          <%= link_to "lg", edit_orderitem_path(order_item[0], { size_update: true, size: "large" }), remote: true, method: :patch, class: "size-circle lg" %>
+          <%= link_to "xl", edit_orderitem_path(order_item[0], { size_update: true, size: "extra large" }), remote: true, method: :patch, class: "size-circle xl" %>
+          <script>
+            <% case item.size %>
+              <% when "extra small" %>
+                $(".size-circle").removeClass("size-circle-on");
+                $(".xs").addClass("size-circle-on");
+              <% when "small" %>
+                $(".size-circle").removeClass("size-circle-on");
+                $(".sm").addClass("size-circle-on");
+              <% when "medium" %>
+                $(".size-circle").removeClass("size-circle-on");
+                $(".md").addClass("size-circle-on");
+              <% when "large" %>
+                $(".size-circle").removeClass("size-circle-on");
+                $(".lg").addClass("size-circle-on");
+              <% when "extra large" %>
+                $(".size-circle").removeClass("size-circle-on");
+                $(".xl").addClass("size-circle-on");
+            <% end %>
+          </script>
+        <% end %>
       </div>
       <div class="package-item-description">
         <p><%= @item.description %></p>
